MFB: Fixed bug #43197 (array_intersect_assoc() does not emit warning messages for error inputs)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@245671 c90b9560-bf6c-de11-be94-00142212c4b1